# QT-Analyzer

./: CMakeLists.txt  README.md  dialog.cpp  dialog.h  dialog.ui  infopacet.cpp  infopacet.h  infopacet.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
